--- a/css/style.css
+++ b/css/style.css
@@ -842,8 +842,8 @@
             width: 30%;
             margin: 0 0 20px;
         }
-
-        .collection-video-container .picture-container{
+        
+        .collection-video-container .picture-container {
             margin: 0 -4px 0;
         }
         
@@ -863,10 +863,17 @@
             content: '';
             display: inline-block;
             vertical-align: top;
-            width: 100%;
-            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
             position: absolute;
             transition: .2s all ease-in-out;
+        }
+        
+        .collection-video-container .picture-container a {
+            display: inline-block;
+            vertical-align: top;
         }
         
         .collection-video-container .picture-container>li a:hover::before {
@@ -1139,7 +1146,7 @@
             .news-block .image-container {
                 margin: 0 20px 0 0;
             }
-            .aside .article-container .section-heading{
+            .aside .article-container .section-heading {
                 text-align: center;
             }
             .figure-container {
@@ -1154,7 +1161,7 @@
                 overflow: hidden;
                 margin: 0 0 20px;
                 text-align: center;
-            }          
+            }
             .article-aside .image-container {
                 margin: 0 20px 0 0px;
             }
